syntax = "proto3";

package chat;

option go_package = "github.com/knighthell-family/knighthell-family-idl/chat";

import "chat-participant.proto";

service ChatParticipantCreateService {
  rpc CreateChatParticipant(CreateChatParticipantRequest) returns (CreateChatParticipantResponse);
}

message CreateChatParticipantRequest {
  message ChatParticipant {
    message ChatRoom {
      string id = 1;
    }
    ChatRoom room = 1;
  }
  ChatParticipant participant = 1;
}

message CreateChatParticipantResponse {
  ChatParticipant participant = 1;
}

enum ChatParticipantCreateEventType {
  CREATE_CHAT_PARTICIPANT = 0;
  CHAT_PARTICIPANT_CREATED = 1;
}